deploy: e62bb9d44a2ff783402f7d1ee2cc09fd9e2dd94b

--- a/404.html
+++ b/404.html
@@ -58,7 +58,13 @@ setTimeout(() => {
               <a class="relative block px-3 py-2 transition hover:text-teal-500 dark:hover:text-teal-400" href="/my-site/about">About</a>
             </li>
             <li>
-              <a class="relative block px-3 py-2 transition hover:text-teal-500 dark:hover:text-teal-400" href="/my-site/posts">Posts</a>
+              <a class="relative block px-3 py-2 transition hover:text-teal-500 dark:hover:text-teal-400" href="/my-site/posts">Articles</a>
+            </li>
+            <li>
+              <a class="relative block px-3 py-2 transition hover:text-teal-500 dark:hover:text-teal-400" href="/my-site/projects">Projects</a>
+            </li>
+            <li>
+              <a class="relative block px-3 py-2 transition hover:text-teal-500 dark:hover:text-teal-400" href="/my-site/presentations">Speaking</a>
             </li>
           </ul>
         </nav>
