--- a/presentations/aisap-market-view/index.html
+++ b/presentations/aisap-market-view/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-<title>About | Your awesome title</title>
+<title>Using Data to Guide Your Enrollment Strategy | Your awesome title</title>
 
 <meta name="description" content="Write an awesome description for your new site here. It will appear in your document head meta (for Google search results) and in your feed.xml site description." />
 
@@ -41,7 +41,7 @@ setTimeout(() => {
 </script>
 
   </head>
-  <body class="page flex h-full flex-col bg-zinc-50 dark:bg-black">
+  <body class="presentation flex h-full flex-col bg-zinc-50 dark:bg-black">
     <div class="top-0 z-10 h-16 pt-6" style="position:var(--header-position)">
       <div class="sm:px-8 top-[var(--header-top,theme(spacing.6))] w-full" style="position:var(--header-inner-position)">
         <div class="mx-auto max-w-7xl lg:px-8">
@@ -77,21 +77,30 @@ setTimeout(() => {
             <div class="grid grid-cols-1 gap-y-16 lg:grid-cols-2 lg:gap-y-12 mx-auto max-w-2xl lg:max-w-5xl">
   <div class="max-w-2xl lg:order-first lg:row-span-2">
     <h1 class="mt-36 text-4xl font-bold tracking-tight text-zinc-800 dark:text-zinc-100 sm:text-5xl">
-      About
+      Using Data to Guide Your Enrollment Strategy
     </h1>
     <p class="mt-6 text-base text-zinc-600 dark:text-zinc-400">
-      <p>This is the basic Bridgetown site template. You can find out more info about customizing your Bridgetown site, as well as basic Bridgetown usage documentation at <a href="https://bridgetownrb.com/">bridgetownrb.com</a></p>
+      <p>In conjunction with <a href="https://www.aisap.org/events/event-description?CalendarEventKey=f5ab0f04-c369-4d3e-8ff4-2e529c21b829&amp;Home=%2Feducate%2Fcalendar">AISAP (Association of Independent School Admission Professionals)</a>, I presented about NAIS Market View to a group of over 100 admission professionals. My session was one day of a three part workshop, which also focused on other data tools for independent school admissions officers, as well as practical ways to employ these data tools in enrollment offices.</p>
 
-<p>You can find the source code for Bridgetown at GitHub:
-<a href="https://github.com/bridgetownrb">bridgetownrb</a> /
-<a href="https://github.com/bridgetownrb/bridgetown">bridgetown</a></p>
+<p> </p>
+
+<p><strong><em>Session III  -  Friday, May 20 2-3:15pm ET</em></strong></p>
+
+<p>Gain Insight into Your Market to Guide Future Enrollment Strategy</p>
+
+<p> </p>
+
+<blockquote>
+  <p>We will build upon our work with DASL reports and introduce Market View, NAIS’s data-visualization tool. We will teach you how to upload your own data to see trends in your area. You’ll learn how Market View’s easy-to-use mapping technology and affordability algorithm overlay local demographic and traffic info, along with economic data.</p>
+</blockquote>
 
     </p>
   </div>
   <div class="lg:pl-20">
     <div class="mt-36 mb-12 max-w-xs px-2.5 lg:max-w-none">
-      <img alt="" sizes="(min-width: 1024px) 32rem, 20rem" src="/my-site/images/romy_and_steph.jpg" decoding="async" data-nimg="1" class="aspect-square rotate-3 rounded-3xl bg-zinc-100 object-cover dark:bg-zinc-800" loading="lazy" style="color: transparent;" width="800" height="800">
+      <img alt="" sizes="(min-width: 1024px) 32rem, 20rem" src="https://higherlogicdownload.s3.amazonaws.com/AISAP/d8f8fa63-7504-4e46-8d7e-2e4673662c8e/UploadedImages/Event_Images/220516_DASL-Course.png" decoding="async" data-nimg="1" class="aspect-square rounded-3xl bg-zinc-100 object-cover dark:bg-zinc-800" loading="lazy" style="color: transparent;" width="800" height="800">
     </div>
+
     <ul role="list">
   <li class="flex">
     <a href="https://twitter.com/stephanieblack" class="group flex text-sm font-medium text-zinc-800 transition hover:text-teal-500 dark:text-zinc-200 dark:hover:text-teal-500" href="/about#">
