deploy: 8070d3e527d9e6198a6dbf046eca593899dcb32d

--- a/presentations/aisap-market-view/index.html
+++ b/presentations/aisap-market-view/index.html
@@ -44,7 +44,7 @@ setTimeout(() => {
   <body class="presentation flex h-full flex-col bg-zinc-50 dark:bg-black">
     <div class="top-0 z-10 h-16 pt-6" style="position:var(--header-position)">
       <div class="sm:px-8 top-[var(--header-top,theme(spacing.6))] w-full" style="position:var(--header-inner-position)">
-        <div class="mx-auto max-w-7xl lg:px-8">
+        <div class="mx-auto max-w-7xl lg:px-8 dark:text-slate-400">
           <div class="relative px-4 sm:px-8 lg:px-12">
   <div class="mx-auto max-w-2xl lg:max-w-5xl">
     <div class="relative flex gap-4">
@@ -79,7 +79,7 @@ setTimeout(() => {
     <h1 class="mt-36 text-4xl font-bold tracking-tight text-zinc-800 dark:text-zinc-100 sm:text-5xl">
       Using Data to Guide Your Enrollment Strategy
     </h1>
-    <p class="mt-6 text-base text-zinc-600 dark:text-zinc-400">
+    <p class="dark:text-slate-400 mt-6 text-base text-zinc-600 dark:text-zinc-400">
       <p>In conjunction with <a href="https://www.aisap.org/events/event-description?CalendarEventKey=f5ab0f04-c369-4d3e-8ff4-2e529c21b829&amp;Home=%2Feducate%2Fcalendar">AISAP (Association of Independent School Admission Professionals)</a>, I presented about NAIS Market View to a group of over 100 admission professionals. My session was one day of a three part workshop, which also focused on other data tools for independent school admissions officers, as well as practical ways to employ these data tools in enrollment offices.</p>
 
 <p> </p>
