--- a/500.html
+++ b/500.html
@@ -44,7 +44,7 @@ setTimeout(() => {
   <body class="default flex h-full flex-col bg-zinc-50 dark:bg-black">
     <div class="top-0 z-10 h-16 pt-6" style="position:var(--header-position)">
       <div class="sm:px-8 top-[var(--header-top,theme(spacing.6))] w-full" style="position:var(--header-inner-position)">
-        <div class="mx-auto max-w-7xl lg:px-8">
+        <div class="mx-auto max-w-7xl lg:px-8 dark:text-slate-400">
           <div class="relative px-4 sm:px-8 lg:px-12">
   <div class="mx-auto max-w-2xl lg:max-w-5xl">
     <div class="relative flex gap-4">
