--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@ setTimeout(() => {
   <body class="page flex h-full flex-col bg-zinc-50 dark:bg-black">
     <div class="top-0 z-10 h-16 pt-6" style="position:var(--header-position)">
       <div class="sm:px-8 top-[var(--header-top,theme(spacing.6))] w-full" style="position:var(--header-inner-position)">
-        <div class="mx-auto max-w-7xl lg:px-8">
+        <div class="mx-auto max-w-7xl lg:px-8 dark:text-slate-400">
           <div class="relative px-4 sm:px-8 lg:px-12">
   <div class="mx-auto max-w-2xl lg:max-w-5xl">
     <div class="relative flex gap-4">
@@ -79,7 +79,7 @@ setTimeout(() => {
     <h1 class="mt-36 text-4xl font-bold tracking-tight text-zinc-800 dark:text-zinc-100 sm:text-5xl">
       I&#39;m Stephanie Wilkinson. I lead software teams.
     </h1>
-    <p class="mt-6 text-base text-zinc-600 dark:text-zinc-400">
+    <p class="dark:text-slate-400 mt-6 text-base text-zinc-600 dark:text-zinc-400">
       <p>Hi! I’m Stephanie Wilkinson. I live in Los Angeles and have built software for schools since 2009.</p>
 
 <p>Leverage agile frameworks to provide a robust synopsis for high level overviews. Iterative approaches to corporate strategy foster collaborative thinking to further the overall value proposition. Organically grow the holistic world view of disruptive innovation via workplace diversity and empowerment.</p>
