--- a/404.html
+++ b/404.html
@@ -3,9 +3,9 @@
   <head>
     <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-<title>404 | Your awesome title</title>
+<title>404 | Portfolio, posts and projects</title>
 
-<meta name="description" content="Write an awesome description for your new site here. It will appear in your document head meta (for Google search results) and in your feed.xml site description." />
+<meta name="description" content="Stephanie Wilkinson leads engineering teams to create game-changing apps for schools." />
 
 <link rel="stylesheet" href="/my-site/_bridgetown/static/index.7SIWVW6E.css" />
 <script src="/my-site/_bridgetown/static/index.S6OSPYSU.js" defer></script>
@@ -46,28 +46,24 @@ setTimeout(() => {
       <div class="sm:px-8 top-[var(--header-top,theme(spacing.6))] w-full" style="position:var(--header-inner-position)">
         <div class="mx-auto max-w-7xl lg:px-8 dark:text-slate-400">
           <div class="relative px-4 sm:px-8 lg:px-12">
-  <div class="mx-auto max-w-2xl lg:max-w-5xl">
     <div class="relative flex gap-4">
-      <div class="flex flex-1 justify-end md:justify-center">
-        <nav class="pointer-events-auto hidden md:block">
+      <div class="flex flex-1 justify-center">
+        <nav class="pointer-events-auto ">
           <ul class="flex rounded-full bg-white/90 px-3 text-sm font-medium text-zinc-800 shadow-lg shadow-zinc-800/5 ring-1 ring-zinc-900/5 backdrop-blur dark:bg-zinc-800/90 dark:text-zinc-200 dark:ring-white/10">
             <li>
               <a class="relative block px-3 py-2 transition hover:text-teal-500 dark:hover:text-teal-400" href="/my-site/">Home</a>
             </li>
             <li>
-              <a class="relative block px-3 py-2 transition hover:text-teal-500 dark:hover:text-teal-400" href="/my-site/about">About</a>
-            </li>
-            <li>
-              <a class="relative block px-3 py-2 transition hover:text-teal-500 dark:hover:text-teal-400" href="/my-site/articles">Articles</a>
-            </li>
-            <li>
-              <a class="relative block px-3 py-2 transition hover:text-teal-500 dark:hover:text-teal-400" href="/my-site/posts">Blog</a>
+              <a class="relative block px-3 py-2 transition hover:text-teal-500 dark:hover:text-teal-400" href="/my-site/community">Community</a>
             </li>
             <li>
               <a class="relative block px-3 py-2 transition hover:text-teal-500 dark:hover:text-teal-400" href="/my-site/projects">Projects</a>
             </li>
             <li>
               <a class="relative block px-3 py-2 transition hover:text-teal-500 dark:hover:text-teal-400" href="/my-site/presentations">Speaking</a>
+            </li>
+            <li>
+              <a class="relative block px-3 py-2 transition hover:text-teal-500 dark:hover:text-teal-400" href="/my-site/posts">Blog</a>
             </li>
           </ul>
         </nav>
