--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
   <head>
     <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-<title>Stephanie Wilkinson | Your awesome title</title>
+<title>Stephanie Wilkinson | Portfolio, posts and projects</title>
 
-<meta name="description" content="Write an awesome description for your new site here. It will appear in your document head meta (for Google search results) and in your feed.xml site description." />
+<meta name="description" content="Stephanie Wilkinson leads engineering teams to create game-changing apps for schools." />
 
 <link rel="stylesheet" href="/my-site/_bridgetown/static/index.7SIWVW6E.css" />
 <script src="/my-site/_bridgetown/static/index.S6OSPYSU.js" defer></script>
@@ -46,28 +46,24 @@ setTimeout(() => {
       <div class="sm:px-8 top-[var(--header-top,theme(spacing.6))] w-full" style="position:var(--header-inner-position)">
         <div class="mx-auto max-w-7xl lg:px-8 dark:text-slate-400">
           <div class="relative px-4 sm:px-8 lg:px-12">
-  <div class="mx-auto max-w-2xl lg:max-w-5xl">
     <div class="relative flex gap-4">
-      <div class="flex flex-1 justify-end md:justify-center">
-        <nav class="pointer-events-auto hidden md:block">
+      <div class="flex flex-1 justify-center">
+        <nav class="pointer-events-auto ">
           <ul class="flex rounded-full bg-white/90 px-3 text-sm font-medium text-zinc-800 shadow-lg shadow-zinc-800/5 ring-1 ring-zinc-900/5 backdrop-blur dark:bg-zinc-800/90 dark:text-zinc-200 dark:ring-white/10">
             <li>
               <a class="relative block px-3 py-2 transition hover:text-teal-500 dark:hover:text-teal-400" href="/my-site/">Home</a>
             </li>
             <li>
-              <a class="relative block px-3 py-2 transition hover:text-teal-500 dark:hover:text-teal-400" href="/my-site/about">About</a>
-            </li>
-            <li>
-              <a class="relative block px-3 py-2 transition hover:text-teal-500 dark:hover:text-teal-400" href="/my-site/articles">Articles</a>
-            </li>
-            <li>
-              <a class="relative block px-3 py-2 transition hover:text-teal-500 dark:hover:text-teal-400" href="/my-site/posts">Blog</a>
+              <a class="relative block px-3 py-2 transition hover:text-teal-500 dark:hover:text-teal-400" href="/my-site/community">Community</a>
             </li>
             <li>
               <a class="relative block px-3 py-2 transition hover:text-teal-500 dark:hover:text-teal-400" href="/my-site/projects">Projects</a>
             </li>
             <li>
               <a class="relative block px-3 py-2 transition hover:text-teal-500 dark:hover:text-teal-400" href="/my-site/presentations">Speaking</a>
+            </li>
+            <li>
+              <a class="relative block px-3 py-2 transition hover:text-teal-500 dark:hover:text-teal-400" href="/my-site/posts">Blog</a>
             </li>
           </ul>
         </nav>
@@ -82,13 +78,25 @@ setTimeout(() => {
     <h1 class=" text-6xl font-bold tracking-tight text-zinc-800 dark:text-zinc-100 sm:text-6xl">
       Stephanie Wilkinson
     </h1>
-    <p class="text-zinc-800 tracking-tight dark:text-zinc-100 sm:text-3xl">
+    <p class="text-zinc-800 tracking-tight dark:text-zinc-100 text-3xl mb-8">
       Engineering leadership
     </p>
-    <p class="dark:text-slate-400 mt-6 text-base text-zinc-600 dark:text-zinc-400">
-      <p>Hi! I’m Stephanie Wilkinson. I live in Los Angeles and have built software for schools since 2009. My passion is using code to solve problems for people, and I love learning new tools and increasing impact.</p>
+    <span class="dark:text-zinc-400 mt-6 text-base text-zinc-600">
+      <p>Stephanie Wilkinson lives in Los Angeles and specializes in engineering leadership in the education space. Her passion is using code to solve problems for people, and she loves learning new tools and increasing impact.</p>
 
-    </p>
+<p> </p>
+
+<p>Beginning in 2009, Stephanie began writing code for schools. She honed her programming skills over the years, specializing in Ruby in the early years. She built out an engineering team in 2014 to expand her impact building critical software for schools. With that team, she sold the app they built to multiple customers.</p>
+
+<p> </p>
+
+<p>These days, you can find Stephanie directing the engineering department at the National Association of Independent Schools. If she’s not busy there, you’ll find her building duplo trains with her daughter Andromeda.</p>
+
+<p> </p>
+
+<p>Read more of <a href="https://stephanieawilkinson.com/my-site/posts">her writing</a>, and explore <a href="https://stephanieawilkinson.com/my-site/projects">her projects</a> or <a href="https://stephanieawilkinson.com/my-site/presentations">presentations</a>.</p>
+
+    </span>
   </div>
   <div class="lg:pl-20">
     <div class="mb-12 max-w-2xl lg:visible px-2.5 lg:max-w-none">
