--- a/presentations/index.html
+++ b/presentations/index.html
@@ -41,7 +41,7 @@ setTimeout(() => {
 </script>
 
   </head>
-  <body class="presentation flex h-full flex-col bg-zinc-50 dark:bg-black">
+  <body class="page flex h-full flex-col bg-zinc-50 dark:bg-black">
     <div class="top-0 z-10 h-16 pt-6" style="position:var(--header-position)">
       <div class="sm:px-8 top-[var(--header-top,theme(spacing.6))] w-full" style="position:var(--header-inner-position)">
         <div class="mx-auto max-w-7xl lg:px-8 dark:text-slate-400">
@@ -73,12 +73,15 @@ setTimeout(() => {
 </div>
 
           <main>
-            <div class="grid grid-cols-1 gap-y-16 lg:grid-cols-2 lg:gap-y-12 mx-auto max-w-2xl lg:max-w-5xl">
-  <div class="max-w-2xl lg:order-first lg:row-span-2">
-    <h1 class="mt-36 mb-8 text-4xl font-bold tracking-tight text-zinc-800 dark:text-zinc-100 sm:text-5xl">
+            <div class="mt-24 grid grid-cols-1 gap-y-16 lg:grid-cols-2 lg:gap-y-12 mx-auto max-w-2xl lg:max-w-7xl">
+  <div class="">
+    <h1 class="text-6xl font-bold tracking-tight text-zinc-800 dark:text-zinc-100 sm:text-6xl">
       Presentations &amp; workshops
     </h1>
-    <span class="dark:text-slate-400 mt-6 text-base text-zinc-600">
+    <p class="text-zinc-800 tracking-tight dark:text-zinc-100 text-3xl mb-8">
+      
+    </p>
+    <span class="dark:text-zinc-400 mt-6 text-base text-zinc-600">
       
 <div class="flex my-12 max-w-3xl flex-col space-y-16">
   <article class="md:grid md:grid-cols-4 md:items-baseline">
@@ -220,10 +223,9 @@ setTimeout(() => {
     </span>
   </div>
   <div class="lg:pl-20">
-    <div class="mt-36 mb-12 max-w-xs px-2.5 lg:max-w-none">
-      <img alt="" sizes="(min-width: 1024px) 32rem, 20rem" src="/my-site/images/rubyinhollywood.jpg" decoding="async" data-nimg="1" class="aspect-square rounded-3xl bg-zinc-100 object-cover dark:bg-zinc-800" loading="lazy" style="color: transparent;" width="800" height="800">
+    <div class="mb-12 max-w-2xl lg:visible px-2.5 lg:max-w-none">
+      <img alt="" sizes="(min-width: 1024px) 32rem, 20rem" src="/my-site/images/romy_and_steph.jpg" decoding="async" data-nimg="1" class="aspect-square rotate-3 rounded-3xl bg-zinc-100 object-cover dark:bg-zinc-800" loading="lazy" style="color: transparent;">
     </div>
-
     <div class="columns-2">
   <div class="w-full">
     <ul role="list">
