--- a/presentations/jump-start-with-market-view/index.html
+++ b/presentations/jump-start-with-market-view/index.html
@@ -41,7 +41,7 @@ setTimeout(() => {
 </script>
 
   </head>
-  <body class="presentation flex h-full flex-col bg-zinc-50 dark:bg-black">
+  <body class="post flex h-full flex-col bg-zinc-50 dark:bg-black">
     <div class="top-0 z-10 h-16 pt-6" style="position:var(--header-position)">
       <div class="sm:px-8 top-[var(--header-top,theme(spacing.6))] w-full" style="position:var(--header-inner-position)">
         <div class="mx-auto max-w-7xl lg:px-8 dark:text-slate-400">
@@ -73,7 +73,7 @@ setTimeout(() => {
 </div>
 
           <main>
-            <div class="grid grid-cols-1 gap-y-16 lg:grid-cols-2 lg:gap-y-12 mx-auto max-w-2xl lg:max-w-5xl">
+            <div class="grid grid-cols-1 gap-y-16 lg:grid-cols-2 lg:gap-y-12 mx-auto max-w-xl lg:max-w-7xl">
   <div class="max-w-2xl lg:order-first lg:row-span-2">
     <h1 class="mt-36 mb-8 text-4xl font-bold tracking-tight text-zinc-800 dark:text-zinc-100 sm:text-5xl">
       Jump-Start the Season with the New NAIS Market View Trend Report
