--- a/projects/concert_match/index.html
+++ b/projects/concert_match/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-<title>Bodytemp | Portfolio, posts and projects</title>
+<title>Concert Match | Portfolio, posts and projects</title>
 
 <meta name="description" content="Stephanie Wilkinson leads engineering teams to create game-changing apps for schools." />
 
@@ -75,7 +75,7 @@ setTimeout(() => {
           <main>
             <div class="mx-auto max-w-2xl lg:max-w-7xl">
   <h1 class="mt-36 mb-8 text-4xl font-bold tracking-tight text-zinc-800 dark:text-zinc-100 sm:text-5xl">
-    Bodytemp
+    Concert Match
   </h1>
   <div class="dark:text-slate-400 text-base text-zinc-600 space-y-4">
     
