--- a/projects/index.html
+++ b/projects/index.html
@@ -79,10 +79,10 @@ setTimeout(() => {
   </h1>
   <div class="dark:text-slate-400 text-base text-zinc-600 space-y-4">
     <div class="">
-  <div class="mx-auto mt-12 grid max-w-xl gap-5 lg:max-w-none lg:grid-cols-2">
+  <div class="mx-auto mt-12 grid max-w-xl gap-12 lg:max-w-none lg:grid-cols-2">
       <div class="flex flex-col overflow-hidden rounded-lg shadow-lg">
         <div class="flex-shrink-0">
-          <img class="h-48 w-full object-cover" src="https://camo.githubusercontent.com/4335dfb1ddc10c0e3cf79e17249591b788ba5c61976a951d1dd1a03ee2b363f2/687474703a2f2f692e696d6775722e636f6d2f754c47477a75522e676966" alt="" />
+          <img class="h-48 w-full object-cover" src="images/yonderbook.png" alt="" />
         </div>
         <div class="flex flex-1 flex-col justify-between bg-white p-6">
           <div class="flex-1">
@@ -93,72 +93,17 @@ setTimeout(() => {
             </p>
             <a href="#" class="mt-2 block">
               <p class="text-3xl font-semibold text-gray-900">
-                Bodytemp
+                Yonderbook
               </p>
               <p class="mt-3 text-base text-gray-500">
-                An ionic app for Android to track a user&#39;s basal body temperature for birth control.
+                Use Goodreads bookshelves to download books from your library
               </p>
             </a>
           </div>
           <div class="mt-6 flex items-center">
-              <span class="mr-1 inline-flex items-center rounded-full bg-blue-100 px-2.5 py-0.5 text-xs font-medium text-blue-800">mobile</span>
-              <span class="mr-1 inline-flex items-center rounded-full bg-blue-100 px-2.5 py-0.5 text-xs font-medium text-blue-800">javascript</span>
-              <span class="mr-1 inline-flex items-center rounded-full bg-blue-100 px-2.5 py-0.5 text-xs font-medium text-blue-800">angular</span>
-              <span class="mr-1 inline-flex items-center rounded-full bg-blue-100 px-2.5 py-0.5 text-xs font-medium text-blue-800">ionic</span>
-          </div>
-        </div>
-      </div>
-      <div class="flex flex-col overflow-hidden rounded-lg shadow-lg">
-        <div class="flex-shrink-0">
-          <img class="h-48 w-full object-cover" src="images/conrex.png" alt="" />
-        </div>
-        <div class="flex flex-1 flex-col justify-between bg-white p-6">
-          <div class="flex-1">
-            <p class="text-sm font-medium text-indigo-600">
-              <a href="#" class="hover:underline">
-                Nonprofit
-              </a>
-            </p>
-            <a href="#" class="mt-2 block">
-              <p class="text-3xl font-semibold text-gray-900">
-                Conrex
-              </p>
-              <p class="mt-3 text-base text-gray-500">
-                An Elixir implementation of the Paul Bourke&#39;s Conrec algorithm to calculate the drive-time to a specified location.
-              </p>
-            </a>
-          </div>
-          <div class="mt-6 flex items-center">
-              <span class="mr-1 inline-flex items-center rounded-full bg-blue-100 px-2.5 py-0.5 text-xs font-medium text-blue-800">elixir</span>
-              <span class="mr-1 inline-flex items-center rounded-full bg-blue-100 px-2.5 py-0.5 text-xs font-medium text-blue-800">GIS</span>
-              <span class="mr-1 inline-flex items-center rounded-full bg-blue-100 px-2.5 py-0.5 text-xs font-medium text-blue-800">mapping</span>
-          </div>
-        </div>
-      </div>
-      <div class="flex flex-col overflow-hidden rounded-lg shadow-lg">
-        <div class="flex-shrink-0">
-          <img class="h-48 w-full object-cover" src="https://marketview.nais.org/assets/svgs/mv-logo.svg" alt="" />
-        </div>
-        <div class="flex flex-1 flex-col justify-between bg-white p-6">
-          <div class="flex-1">
-            <p class="text-sm font-medium text-indigo-600">
-              <a href="#" class="hover:underline">
-                Nonprofit
-              </a>
-            </p>
-            <a href="#" class="mt-2 block">
-              <p class="text-3xl font-semibold text-gray-900">
-                Market View
-              </p>
-              <p class="mt-3 text-base text-gray-500">
-                Use data to improve your recruitment strategy, find prospective families, and better understand your community.
-              </p>
-            </a>
-          </div>
-          <div class="mt-6 flex items-center">
-              <span class="mr-1 inline-flex items-center rounded-full bg-blue-100 px-2.5 py-0.5 text-xs font-medium text-blue-800">elixir</span>
-              <span class="mr-1 inline-flex items-center rounded-full bg-blue-100 px-2.5 py-0.5 text-xs font-medium text-blue-800">GIS</span>
-              <span class="mr-1 inline-flex items-center rounded-full bg-blue-100 px-2.5 py-0.5 text-xs font-medium text-blue-800">emberjs</span>
+              <span class="mr-1 inline-flex items-center rounded-full bg-blue-100 px-2.5 py-0.5 text-xs font-medium text-blue-800">ruby</span>
+              <span class="mr-1 inline-flex items-center rounded-full bg-blue-100 px-2.5 py-0.5 text-xs font-medium text-blue-800">roda</span>
+              <span class="mr-1 inline-flex items-center rounded-full bg-blue-100 px-2.5 py-0.5 text-xs font-medium text-blue-800">open-source</span>
           </div>
         </div>
       </div>
@@ -192,7 +137,89 @@ setTimeout(() => {
       </div>
       <div class="flex flex-col overflow-hidden rounded-lg shadow-lg">
         <div class="flex-shrink-0">
-          <img class="h-48 w-full object-cover" src="" alt="" />
+          <img class="h-48 w-full object-cover" src="images/member_vote.png" alt="" />
+        </div>
+        <div class="flex flex-1 flex-col justify-between bg-white p-6">
+          <div class="flex-1">
+            <p class="text-sm font-medium text-indigo-600">
+              <a href="#" class="hover:underline">
+                Nonprofit
+              </a>
+            </p>
+            <a href="#" class="mt-2 block">
+              <p class="text-3xl font-semibold text-gray-900">
+                Member Vote
+              </p>
+              <p class="mt-3 text-base text-gray-500">
+                Proxy voting for NAIS members
+              </p>
+            </a>
+          </div>
+          <div class="mt-6 flex items-center">
+              <span class="mr-1 inline-flex items-center rounded-full bg-blue-100 px-2.5 py-0.5 text-xs font-medium text-blue-800">ruby</span>
+              <span class="mr-1 inline-flex items-center rounded-full bg-blue-100 px-2.5 py-0.5 text-xs font-medium text-blue-800">tailwind</span>
+              <span class="mr-1 inline-flex items-center rounded-full bg-blue-100 px-2.5 py-0.5 text-xs font-medium text-blue-800">roda</span>
+              <span class="mr-1 inline-flex items-center rounded-full bg-blue-100 px-2.5 py-0.5 text-xs font-medium text-blue-800">oauth</span>
+          </div>
+        </div>
+      </div>
+      <div class="flex flex-col overflow-hidden rounded-lg shadow-lg">
+        <div class="flex-shrink-0">
+          <img class="h-48 w-full object-cover" src="https://marketview.nais.org/assets/svgs/mv-logo.svg" alt="" />
+        </div>
+        <div class="flex flex-1 flex-col justify-between bg-white p-6">
+          <div class="flex-1">
+            <p class="text-sm font-medium text-indigo-600">
+              <a href="#" class="hover:underline">
+                Nonprofit
+              </a>
+            </p>
+            <a href="#" class="mt-2 block">
+              <p class="text-3xl font-semibold text-gray-900">
+                Market View
+              </p>
+              <p class="mt-3 text-base text-gray-500">
+                Use data to improve your recruitment strategy, find prospective families, and better understand your community.
+              </p>
+            </a>
+          </div>
+          <div class="mt-6 flex items-center">
+              <span class="mr-1 inline-flex items-center rounded-full bg-blue-100 px-2.5 py-0.5 text-xs font-medium text-blue-800">elixir</span>
+              <span class="mr-1 inline-flex items-center rounded-full bg-blue-100 px-2.5 py-0.5 text-xs font-medium text-blue-800">GIS</span>
+              <span class="mr-1 inline-flex items-center rounded-full bg-blue-100 px-2.5 py-0.5 text-xs font-medium text-blue-800">emberjs</span>
+          </div>
+        </div>
+      </div>
+      <div class="flex flex-col overflow-hidden rounded-lg shadow-lg">
+        <div class="flex-shrink-0">
+          <img class="h-48 w-full object-cover" src="./images/conrex.png" alt="" />
+        </div>
+        <div class="flex flex-1 flex-col justify-between bg-white p-6">
+          <div class="flex-1">
+            <p class="text-sm font-medium text-indigo-600">
+              <a href="#" class="hover:underline">
+                Nonprofit
+              </a>
+            </p>
+            <a href="#" class="mt-2 block">
+              <p class="text-3xl font-semibold text-gray-900">
+                Conrex
+              </p>
+              <p class="mt-3 text-base text-gray-500">
+                An Elixir implementation of the Paul Bourke&#39;s Conrec algorithm to calculate the drive-time to a specified location.
+              </p>
+            </a>
+          </div>
+          <div class="mt-6 flex items-center">
+              <span class="mr-1 inline-flex items-center rounded-full bg-blue-100 px-2.5 py-0.5 text-xs font-medium text-blue-800">elixir</span>
+              <span class="mr-1 inline-flex items-center rounded-full bg-blue-100 px-2.5 py-0.5 text-xs font-medium text-blue-800">GIS</span>
+              <span class="mr-1 inline-flex items-center rounded-full bg-blue-100 px-2.5 py-0.5 text-xs font-medium text-blue-800">mapping</span>
+          </div>
+        </div>
+      </div>
+      <div class="flex flex-col overflow-hidden rounded-lg shadow-lg">
+        <div class="flex-shrink-0">
+          <img class="h-48 w-full object-cover" src="images/bodytemp.jpg" alt="" />
         </div>
         <div class="flex flex-1 flex-col justify-between bg-white p-6">
           <div class="flex-1">
@@ -203,17 +230,70 @@ setTimeout(() => {
             </p>
             <a href="#" class="mt-2 block">
               <p class="text-3xl font-semibold text-gray-900">
-                Yonderbook
+                Bodytemp
               </p>
               <p class="mt-3 text-base text-gray-500">
-                alskdjflskdjfd;lskjf
+                An ionic app for Android to track a user&#39;s basal body temperature for birth control.
               </p>
             </a>
           </div>
           <div class="mt-6 flex items-center">
-              <span class="mr-1 inline-flex items-center rounded-full bg-blue-100 px-2.5 py-0.5 text-xs font-medium text-blue-800">elixir</span>
-              <span class="mr-1 inline-flex items-center rounded-full bg-blue-100 px-2.5 py-0.5 text-xs font-medium text-blue-800">GIS</span>
-              <span class="mr-1 inline-flex items-center rounded-full bg-blue-100 px-2.5 py-0.5 text-xs font-medium text-blue-800">mapping</span>
+              <span class="mr-1 inline-flex items-center rounded-full bg-blue-100 px-2.5 py-0.5 text-xs font-medium text-blue-800">mobile</span>
+              <span class="mr-1 inline-flex items-center rounded-full bg-blue-100 px-2.5 py-0.5 text-xs font-medium text-blue-800">javascript</span>
+              <span class="mr-1 inline-flex items-center rounded-full bg-blue-100 px-2.5 py-0.5 text-xs font-medium text-blue-800">angular</span>
+              <span class="mr-1 inline-flex items-center rounded-full bg-blue-100 px-2.5 py-0.5 text-xs font-medium text-blue-800">ionic</span>
+          </div>
+        </div>
+      </div>
+      <div class="flex flex-col overflow-hidden rounded-lg shadow-lg">
+        <div class="flex-shrink-0">
+          <img class="h-48 w-full object-cover" src="images/abalone.jpg" alt="" />
+        </div>
+        <div class="flex flex-1 flex-col justify-between bg-white p-6">
+          <div class="flex-1">
+            <p class="text-sm font-medium text-indigo-600">
+              <a href="#" class="hover:underline">
+                Open source
+              </a>
+            </p>
+            <a href="#" class="mt-2 block">
+              <p class="text-3xl font-semibold text-gray-900">
+                Abalone
+              </p>
+              <p class="mt-3 text-base text-gray-500">
+                A playable, in-browser version of the strategy game Abalone.
+              </p>
+            </a>
+          </div>
+          <div class="mt-6 flex items-center">
+              <span class="mr-1 inline-flex items-center rounded-full bg-blue-100 px-2.5 py-0.5 text-xs font-medium text-blue-800">javascript</span>
+              <span class="mr-1 inline-flex items-center rounded-full bg-blue-100 px-2.5 py-0.5 text-xs font-medium text-blue-800">angular</span>
+          </div>
+        </div>
+      </div>
+      <div class="flex flex-col overflow-hidden rounded-lg shadow-lg">
+        <div class="flex-shrink-0">
+          <img class="h-48 w-full object-cover" src="images/concert_match.jpg" alt="" />
+        </div>
+        <div class="flex flex-1 flex-col justify-between bg-white p-6">
+          <div class="flex-1">
+            <p class="text-sm font-medium text-indigo-600">
+              <a href="#" class="hover:underline">
+                Open source
+              </a>
+            </p>
+            <a href="#" class="mt-2 block">
+              <p class="text-3xl font-semibold text-gray-900">
+                Concert Match
+              </p>
+              <p class="mt-3 text-base text-gray-500">
+                A playable, in-browser version of the strategy game Abalone.
+              </p>
+            </a>
+          </div>
+          <div class="mt-6 flex items-center">
+              <span class="mr-1 inline-flex items-center rounded-full bg-blue-100 px-2.5 py-0.5 text-xs font-medium text-blue-800">javascript</span>
+              <span class="mr-1 inline-flex items-center rounded-full bg-blue-100 px-2.5 py-0.5 text-xs font-medium text-blue-800">angular</span>
           </div>
         </div>
       </div>
