deploy: 836129f3b6ecad15676a6eb9700dc25bcf72b761

--- a/projects/index.html
+++ b/projects/index.html
@@ -74,15 +74,15 @@ setTimeout(() => {
 
           <main>
             <div class="mx-auto max-w-2xl lg:max-w-7xl">
-  <h1 class="mt-36 mb-8 text-4xl font-bold tracking-tight text-zinc-800 dark:text-zinc-100 sm:text-5xl">
+  <h1 class="md:mt-16 text-5xl font-bold tracking-tight text-zinc-800 dark:text-zinc-100">
     My projects
   </h1>
-  <div class="dark:text-slate-400 text-base text-zinc-600 space-y-4">
+  <div class="mt-4 dark:text-slate-400 text-base text-zinc-600 space-y-4">
     <div class="">
-  <div class="mx-auto mt-12 grid max-w-xl gap-12 lg:max-w-none lg:grid-cols-2">
+  <div class="mx-auto mt-12 grid max-w-xl gap-16 lg:max-w-none lg:grid-cols-2">
       <div class="flex flex-col overflow-hidden rounded-lg shadow-lg">
         <div class="flex-shrink-0">
-          <img class="h-48 w-full object-cover" src="images/yonderbook.png" alt="" />
+          <img class="h-80 w-full object-cover" src="images/yonderbook.png" alt="" />
         </div>
         <div class="flex flex-1 flex-col justify-between bg-white p-6">
           <div class="flex-1">
@@ -109,7 +109,7 @@ setTimeout(() => {
       </div>
       <div class="flex flex-col overflow-hidden rounded-lg shadow-lg">
         <div class="flex-shrink-0">
-          <img class="h-48 w-full object-cover" src="images/school_location_api.png" alt="" />
+          <img class="h-80 w-full object-cover" src="images/school_location_api.png" alt="" />
         </div>
         <div class="flex flex-1 flex-col justify-between bg-white p-6">
           <div class="flex-1">
@@ -137,7 +137,7 @@ setTimeout(() => {
       </div>
       <div class="flex flex-col overflow-hidden rounded-lg shadow-lg">
         <div class="flex-shrink-0">
-          <img class="h-48 w-full object-cover" src="images/member_vote.png" alt="" />
+          <img class="h-80 w-full object-cover" src="images/member_vote.png" alt="" />
         </div>
         <div class="flex flex-1 flex-col justify-between bg-white p-6">
           <div class="flex-1">
@@ -165,7 +165,7 @@ setTimeout(() => {
       </div>
       <div class="flex flex-col overflow-hidden rounded-lg shadow-lg">
         <div class="flex-shrink-0">
-          <img class="h-48 w-full object-cover" src="https://marketview.nais.org/assets/svgs/mv-logo.svg" alt="" />
+          <img class="h-80 w-full object-cover" src="https://marketview.nais.org/assets/svgs/mv-logo.svg" alt="" />
         </div>
         <div class="flex flex-1 flex-col justify-between bg-white p-6">
           <div class="flex-1">
@@ -192,7 +192,7 @@ setTimeout(() => {
       </div>
       <div class="flex flex-col overflow-hidden rounded-lg shadow-lg">
         <div class="flex-shrink-0">
-          <img class="h-48 w-full object-cover" src="./images/conrex.png" alt="" />
+          <img class="h-80 w-full object-cover" src="./images/conrex.png" alt="" />
         </div>
         <div class="flex flex-1 flex-col justify-between bg-white p-6">
           <div class="flex-1">
@@ -219,7 +219,7 @@ setTimeout(() => {
       </div>
       <div class="flex flex-col overflow-hidden rounded-lg shadow-lg">
         <div class="flex-shrink-0">
-          <img class="h-48 w-full object-cover" src="images/bodytemp.jpg" alt="" />
+          <img class="h-80 w-full object-cover" src="images/bodytemp.jpg" alt="" />
         </div>
         <div class="flex flex-1 flex-col justify-between bg-white p-6">
           <div class="flex-1">
@@ -247,7 +247,7 @@ setTimeout(() => {
       </div>
       <div class="flex flex-col overflow-hidden rounded-lg shadow-lg">
         <div class="flex-shrink-0">
-          <img class="h-48 w-full object-cover" src="images/abalone.jpg" alt="" />
+          <img class="h-80 w-full object-cover" src="images/abalone.jpg" alt="" />
         </div>
         <div class="flex flex-1 flex-col justify-between bg-white p-6">
           <div class="flex-1">
@@ -273,7 +273,7 @@ setTimeout(() => {
       </div>
       <div class="flex flex-col overflow-hidden rounded-lg shadow-lg">
         <div class="flex-shrink-0">
-          <img class="h-48 w-full object-cover" src="images/concert_match.jpg" alt="" />
+          <img class="h-80 w-full object-cover" src="images/concert_match.jpg" alt="" />
         </div>
         <div class="flex flex-1 flex-col justify-between bg-white p-6">
           <div class="flex-1">
