--- a/projects/market-view/index.html
+++ b/projects/market-view/index.html
@@ -74,10 +74,10 @@ setTimeout(() => {
 
           <main>
             <div class="mx-auto max-w-2xl lg:max-w-7xl">
-  <h1 class="mt-36 mb-8 text-4xl font-bold tracking-tight text-zinc-800 dark:text-zinc-100 sm:text-5xl">
+  <h1 class="md:mt-16 text-5xl font-bold tracking-tight text-zinc-800 dark:text-zinc-100">
     Market View
   </h1>
-  <div class="dark:text-slate-400 text-base text-zinc-600 space-y-4">
+  <div class="mt-4 dark:text-slate-400 text-base text-zinc-600 space-y-4">
     <p>You’ll find this post in your <code class="highlighter-rouge">_posts</code> directory. Go ahead and edit it and re-build the site to see your changes. You can rebuild the site in many different ways, but the most common way is to run <code class="highlighter-rouge">bridgetown serve</code>, which launches a web server and auto-regenerates your site when a file is updated.</p>
 
 <p>Bridgetown requires blog post files to be named according to the following format:</p>
