--- a/community/index.html
+++ b/community/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-<title>Community &amp; volunteer work | Portfolio, posts and projects</title>
+<title>Community &amp; volunteering | Portfolio, posts and projects</title>
 
 <meta name="description" content="Stephanie Wilkinson leads engineering teams to create game-changing apps for schools." />
 
@@ -74,12 +74,12 @@ setTimeout(() => {
 
           <main>
             <div class="mx-auto max-w-2xl lg:max-w-7xl">
-  <h1 class="mt-36 mb-8 text-4xl font-bold tracking-tight text-zinc-800 dark:text-zinc-100 sm:text-5xl">
-    Community &amp; volunteer work
+  <h1 class="md:mt-16 text-5xl font-bold tracking-tight text-zinc-800 dark:text-zinc-100">
+    Community &amp; volunteering
   </h1>
-  <div class="dark:text-slate-400 text-base text-zinc-600 space-y-4">
-    <div class="relative mx-auto max-w-7xl px-6 lg:px-8">
-    <div class="relative overflow-hidden rounded-xl bg-pink-500 py-24 px-8 shadow-2xl lg:grid lg:grid-cols-2 lg:gap-x-8 lg:px-16">
+  <div class="mt-4 dark:text-slate-400 text-base text-zinc-600 space-y-4">
+    <div class="relative mx-auto max-w-7xl lg:px-8">
+    <div class="relative overflow-hidden rounded-xl bg-indigo-500 py-24 px-8 shadow-2xl lg:grid lg:grid-cols-2 lg:gap-x-8 lg:px-16">
       <div class="absolute inset-0 opacity-50 mix-blend-multiply saturate-0 filter">
         <img src="/my-site/images/rubyinhollywoodgroup.jpg" alt="" class="h-full w-full object-cover" />
       </div>
@@ -91,7 +91,7 @@ setTimeout(() => {
           </p>
           <footer class="mt-6">
             <a href="http://rubyinhollywood.com">
-              <button type="button" class="inline-flex items-center rounded border border-transparent bg-pink-600 px-2.5 py-1.5 text-xs font-medium text-white shadow-sm hover:bg-pink-700 focus:outline-none focus:ring-2 focus:ring-pink-500 focus:ring-offset-2">Learn more</button>
+              <button type="button" class="inline-flex items-center rounded border border-transparent bg-indigo-600 px-2.5 py-1.5 text-xs font-medium text-white shadow-sm hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-indigo-500 focus:ring-offset-2">Learn more</button>
             </a>
           </footer>
         </blockquote>
@@ -99,8 +99,8 @@ setTimeout(() => {
     </div>
   </div>
 
-<div class="relative mx-auto max-w-7xl px-6 lg:px-8">
-    <div class="relative overflow-hidden rounded-xl bg-indigo-500 py-24 px-8 shadow-2xl lg:grid lg:grid-cols-2 lg:gap-x-8 lg:px-16">
+<div class="relative mx-auto max-w-7xl lg:px-8">
+    <div class="relative overflow-hidden rounded-xl bg-red-500 py-24 px-8 shadow-2xl lg:grid lg:grid-cols-2 lg:gap-x-8 lg:px-16">
       <div class="absolute inset-0 opacity-50 mix-blend-multiply saturate-0 filter">
         <img src="/my-site/images/railsgirls.jpg" alt="" class="h-full w-full object-cover" />
       </div>
@@ -112,7 +112,7 @@ setTimeout(() => {
           </p>
           <footer class="mt-6">
             <a href="http://railsgirls.com/">
-              <button type="button" class="inline-flex items-center rounded border border-transparent bg-indigo-600 px-2.5 py-1.5 text-xs font-medium text-white shadow-sm hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-indigo-500 focus:ring-offset-2">Learn more</button>
+              <button type="button" class="inline-flex items-center rounded border border-transparent bg-red-600 px-2.5 py-1.5 text-xs font-medium text-white shadow-sm hover:bg-red-700 focus:outline-none focus:ring-2 focus:ring-red-500 focus:ring-offset-2">Learn more</button>
             </a>
           </footer>
         </blockquote>
