--- a/presentations/market-view-executive-assistants/index.html
+++ b/presentations/market-view-executive-assistants/index.html
@@ -75,10 +75,10 @@ setTimeout(() => {
           <main>
             <div class="grid grid-cols-1 gap-y-16 lg:grid-cols-2 lg:gap-y-12 mx-auto max-w-xl lg:max-w-7xl">
   <div class="max-w-2xl lg:order-first lg:row-span-2">
-    <h1 class="mt-36 mb-8 text-4xl font-bold tracking-tight text-zinc-800 dark:text-zinc-100 sm:text-5xl">
+    <h1 class="my-8 text-5xl font-bold tracking-tight text-zinc-800 dark:text-zinc-100">
       Market View for Executive Assistants
     </h1>
-    <span class="dark:text-slate-400 mt-6 text-base text-zinc-600">
+    <span class="dark:text-slate-400 mt-16 text-base text-zinc-600">
       <p>In the role of executive assistant, knowledge is power. In this December 14, 2022, recording from the NAIS Webinar Series for Executive Assistants and Support Staff, you’ll learn about two data tools that will help you take on more high-level administrative responsibilities beyond your day-to-day tasks. Pull data reports relevant to discussions happening at your school with Data and Analysis for School Leadership (DASL) and Market View. Harnessing the ability to pull this data is a huge asset to your leadership team.</p>
 
 <p> </p>
@@ -92,7 +92,7 @@ setTimeout(() => {
     </span>
   </div>
   <div class="lg:pl-20">
-    <div class="mt-36 mb-12 max-w-xs px-2.5 lg:max-w-none">
+    <div class="lg:mt-16 mb-12 max-w-xs px-2.5 lg:max-w-none">
       <img alt="" sizes="(min-width: 1024px) 32rem, 20rem" src="http://stephanieawilkinson.com/my-site/images/2022-12-14_webinar_thumbnail.png" decoding="async" data-nimg="1" class="aspect-square rounded-3xl bg-zinc-100 object-cover dark:bg-zinc-800" loading="lazy" style="color: transparent;" width="800" height="800">
     </div>
 
