--- a/projects/member_vote/index.html
+++ b/projects/member_vote/index.html
@@ -74,10 +74,10 @@ setTimeout(() => {
 
           <main>
             <div class="mx-auto max-w-2xl lg:max-w-7xl">
-  <h1 class="mt-36 mb-8 text-4xl font-bold tracking-tight text-zinc-800 dark:text-zinc-100 sm:text-5xl">
+  <h1 class="md:mt-16 text-5xl font-bold tracking-tight text-zinc-800 dark:text-zinc-100">
     Member Vote
   </h1>
-  <div class="dark:text-slate-400 text-base text-zinc-600 space-y-4">
+  <div class="mt-4 dark:text-slate-400 text-base text-zinc-600 space-y-4">
     
 
   </div>
