deploy: d59496d006d1b930ada5e05c6bb24a2db3aa4454

--- a/presentations/aisap-market-view/index.html
+++ b/presentations/aisap-market-view/index.html
@@ -7,7 +7,7 @@
 
 <meta name="description" content="Stephanie Wilkinson leads engineering teams to create game-changing apps for schools." />
 
-<link rel="stylesheet" href="/my-site/_bridgetown/static/index.7SIWVW6E.css" />
+<link rel="stylesheet" href="/my-site/_bridgetown/static/index.TNDLAPM5.css" />
 <script src="/my-site/_bridgetown/static/index.S6OSPYSU.js" defer></script>
 <script src="https://cdn.tailwindcss.com"></script>
 <script type="module">let lastmod = 0
@@ -78,7 +78,7 @@ setTimeout(() => {
     <h1 class="my-8 text-5xl font-bold tracking-tight text-zinc-800 dark:text-zinc-100">
       Using Data to Guide Your Enrollment Strategy
     </h1>
-    <span class="dark:text-slate-400 mt-16 text-base text-zinc-600">
+    <span class="dark:text-slate-400 mt-16 text-zinc-600">
       <p>In conjunction with <a href="https://www.aisap.org/events/event-description?CalendarEventKey=f5ab0f04-c369-4d3e-8ff4-2e529c21b829&amp;Home=%2Feducate%2Fcalendar">AISAP (Association of Independent School Admission Professionals)</a>, I presented about NAIS Market View to a group of over 100 admission professionals. My session was one day of a three part workshop, which also focused on other data tools for independent school admissions officers, as well as practical ways to employ these data tools in enrollment offices.</p>
 
 <p> </p>
@@ -99,7 +99,6 @@ setTimeout(() => {
     <div class="lg:mt-16 mb-12 max-w-xs px-2.5 lg:max-w-none">
       <img alt="" sizes="(min-width: 1024px) 32rem, 20rem" src="https://higherlogicdownload.s3.amazonaws.com/AISAP/d8f8fa63-7504-4e46-8d7e-2e4673662c8e/UploadedImages/Event_Images/220516_DASL-Course.png" decoding="async" data-nimg="1" class="aspect-square rounded-3xl bg-zinc-100 object-cover dark:bg-zinc-800" loading="lazy" style="color: transparent;" width="800" height="800">
     </div>
-
     <div class="columns-2">
   <div class="w-full">
     <ul role="list">
