--- a/presentations/jump-start-with-market-view/index.html
+++ b/presentations/jump-start-with-market-view/index.html
@@ -7,7 +7,7 @@
 
 <meta name="description" content="Stephanie Wilkinson leads engineering teams to create game-changing apps for schools." />
 
-<link rel="stylesheet" href="/my-site/_bridgetown/static/index.7SIWVW6E.css" />
+<link rel="stylesheet" href="/my-site/_bridgetown/static/index.TNDLAPM5.css" />
 <script src="/my-site/_bridgetown/static/index.S6OSPYSU.js" defer></script>
 <script src="https://cdn.tailwindcss.com"></script>
 <script type="module">let lastmod = 0
@@ -78,7 +78,7 @@ setTimeout(() => {
     <h1 class="my-8 text-5xl font-bold tracking-tight text-zinc-800 dark:text-zinc-100">
       Jump-Start the Season with the New NAIS Market View Trend Report
     </h1>
-    <span class="dark:text-slate-400 mt-16 text-base text-zinc-600">
+    <span class="dark:text-slate-400 mt-16 text-zinc-600">
       <p>If you’ve been waiting for the perfect time to explore how Market View can help you, now is the right time. In a 30-minute interactive webinar, the NAIS Market View team will introduce you to the ways that this powerful tool can help you gain insights into your school’s current and future market. You will walk away with an understanding of the customized demographic visuals available at your fingertips.</p>
 
 <p> </p>
@@ -91,7 +91,6 @@ setTimeout(() => {
     <div class="lg:mt-16 mb-12 max-w-xs px-2.5 lg:max-w-none">
       <img alt="" sizes="(min-width: 1024px) 32rem, 20rem" src="http://stephanieawilkinson.com/my-site/images/2021-08-20_webinar_thumbnail.png" decoding="async" data-nimg="1" class="aspect-square rounded-3xl bg-zinc-100 object-cover dark:bg-zinc-800" loading="lazy" style="color: transparent;" width="800" height="800">
     </div>
-
     <div class="columns-2">
   <div class="w-full">
     <ul role="list">
