deploy: 81f2917fdb51bba4b5778cc61744fec0239898d7

--- a/community/index.html
+++ b/community/index.html
@@ -7,7 +7,7 @@
 
 <meta name="description" content="Stephanie Wilkinson leads engineering teams to create game-changing apps for schools." />
 
-<link rel="stylesheet" href="/my-site/_bridgetown/static/index.TNDLAPM5.css" />
+<link rel="stylesheet" href="/my-site/_bridgetown/static/index.JYWYDG5T.css" />
 <script src="/my-site/_bridgetown/static/index.S6OSPYSU.js" defer></script>
 <script src="https://cdn.tailwindcss.com"></script>
 <script type="module">let lastmod = 0
@@ -77,48 +77,46 @@ setTimeout(() => {
   <h1 class="md:mt-16 text-5xl font-bold tracking-tight text-zinc-800 dark:text-zinc-100">
     Community &amp; volunteering
   </h1>
-  <div class="mt-4 dark:text-slate-400 text-base text-zinc-600 space-y-4">
-    <div class="relative mx-auto max-w-7xl lg:px-8">
-    <div class="relative overflow-hidden rounded-xl bg-indigo-500 py-24 px-8 shadow-2xl lg:grid lg:grid-cols-2 lg:gap-x-8 lg:px-16">
-      <div class="absolute inset-0 opacity-50 mix-blend-multiply saturate-0 filter">
-        <img src="/my-site/images/rubyinhollywoodgroup.jpg" alt="" class="h-full w-full object-cover" />
-      </div>
-      <div class="relative lg:col-span-1">
-        <img class="w-16 w-auto" src="/my-site/images/rubyinhollywoodlogo.png" alt="" />
-        <blockquote class="mt-6 text-white">
-          <p class="text-xl font-medium sm:text-2xl">
-            I founded Ruby in Hollywood in 2015 to build a community of Rubyists. We met weekly to build apps, learn new languages, and <a href="https://pwning.owasp-juice.shop/part1/ctf.html"> play capture the flag.</a>
-          </p>
-          <footer class="mt-6">
-            <a href="http://rubyinhollywood.com">
-              <button type="button" class="inline-flex items-center rounded border border-transparent bg-indigo-600 px-2.5 py-1.5 text-xs font-medium text-white shadow-sm hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-indigo-500 focus:ring-offset-2">Learn more</button>
-            </a>
-          </footer>
-        </blockquote>
-      </div>
-    </div>
+  <div class="mt-16 dark:text-slate-400 text-base text-zinc-600 space-y-4">
+    <div class="relative rounded-xl bg-indigo-500 py-24 shadow-2xl lg:grid lg:grid-cols-2 lg:gap-x-8 lg:px-16">
+  <div class="absolute inset-0 opacity-50 mix-blend-multiply saturate-0 filter">
+    <img src="/my-site/images/rubyinhollywoodgroup.jpg" alt="" class="h-full w-full object-cover" />
   </div>
+  <div class="relative lg:col-span-1">
+    <img class="w-80" src="/my-site/images/rubyinhollywoodlogo.png" alt="" />
+    <blockquote class="mt-6 text-white">
+      <p class="text-xl font-medium sm:text-2xl">
+        I founded Ruby in Hollywood in 2015 to build a community of Rubyists. We met weekly to build apps, learn new languages, and <a href="https://pwning.owasp-juice.shop/part1/ctf.html"> play capture the flag.</a>
+      </p>
+      <footer class="mt-6">
+        <a href="http://rubyinhollywood.com">
+          <button type="button" class="inline-flex items-center rounded border border-transparent bg-indigo-600 px-2.5 py-1.5 text-xs font-medium text-white shadow-sm hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-indigo-500 focus:ring-offset-2">Learn more</button>
+        </a>
+      </footer>
+    </blockquote>
+  </div>
+</div>
 
-<div class="relative mx-auto max-w-7xl lg:px-8">
-    <div class="relative overflow-hidden rounded-xl bg-red-500 py-24 px-8 shadow-2xl lg:grid lg:grid-cols-2 lg:gap-x-8 lg:px-16">
-      <div class="absolute inset-0 opacity-50 mix-blend-multiply saturate-0 filter">
-        <img src="/my-site/images/railsgirls.jpg" alt="" class="h-full w-full object-cover" />
-      </div>
-      <div class="relative lg:col-span-1">
-        <img class="w-16 w-auto" src="/my-site/images/railsgirls-logo.png" alt="" />
-        <blockquote class="mt-6 text-white">
-          <p class="text-xl font-medium sm:text-2xl">
-          I love volunteering for Railsgirls. Each year, it's fascinating to help new women and girls getting started on their programming journeys.
-          </p>
-          <footer class="mt-6">
-            <a href="http://railsgirls.com/">
-              <button type="button" class="inline-flex items-center rounded border border-transparent bg-red-600 px-2.5 py-1.5 text-xs font-medium text-white shadow-sm hover:bg-red-700 focus:outline-none focus:ring-2 focus:ring-red-500 focus:ring-offset-2">Learn more</button>
-            </a>
-          </footer>
-        </blockquote>
-      </div>
+<div class="relative mx-auto max-w-7xl">
+  <div class="relative overflow-hidden rounded-xl bg-red-500 py-24 px-8 shadow-2xl lg:grid lg:grid-cols-2 lg:gap-x-8 lg:px-16">
+    <div class="absolute inset-0 opacity-50 mix-blend-multiply saturate-0 filter">
+      <img src="/my-site/images/railsgirls.jpg" alt="" class="h-full w-full object-cover" />
+    </div>
+    <div class="relative lg:col-span-1">
+      <img class="w-80" src="/my-site/images/railsgirls-logo.png" alt="" />
+      <blockquote class="mt-6 text-white">
+        <p class="text-xl font-medium sm:text-2xl">
+        I love volunteering for Railsgirls. Each year, it's fascinating to help new women and girls getting started on their programming journeys.
+        </p>
+        <footer class="mt-6">
+          <a href="http://railsgirls.com/">
+            <button type="button" class="inline-flex items-center rounded border border-transparent bg-red-600 px-2.5 py-1.5 text-xs font-medium text-white shadow-sm hover:bg-red-700 focus:outline-none focus:ring-2 focus:ring-red-500 focus:ring-offset-2">Learn more</button>
+          </a>
+        </footer>
+      </blockquote>
     </div>
   </div>
+</div>
 
   </div>
 </div>
