--- a/projects/bodytemp/index.html
+++ b/projects/bodytemp/index.html
@@ -7,7 +7,7 @@
 
 <meta name="description" content="Stephanie Wilkinson leads engineering teams to create game-changing apps for schools." />
 
-<link rel="stylesheet" href="/my-site/_bridgetown/static/index.TNDLAPM5.css" />
+<link rel="stylesheet" href="/my-site/_bridgetown/static/index.JYWYDG5T.css" />
 <script src="/my-site/_bridgetown/static/index.S6OSPYSU.js" defer></script>
 <script src="https://cdn.tailwindcss.com"></script>
 <script type="module">let lastmod = 0
@@ -77,7 +77,7 @@ setTimeout(() => {
   <h1 class="md:mt-16 text-5xl font-bold tracking-tight text-zinc-800 dark:text-zinc-100">
     Bodytemp
   </h1>
-  <div class="mt-4 dark:text-slate-400 text-base text-zinc-600 space-y-4">
+  <div class="mt-16 dark:text-slate-400 text-base text-zinc-600 space-y-4">
     
 
   </div>
