deploy: 4683014d84318e498b05b701cbdf774802940faf

--- a/projects/index.html
+++ b/projects/index.html
@@ -10,12 +10,12 @@
 
 <meta name="description" content="Stephanie Wilkinson leads engineering teams to create game-changing apps for schools." />
 
-<link rel="stylesheet" href="/my-site/_bridgetown/static/index.JYWYDG5T.css" />
-<script src="/my-site/_bridgetown/static/index.S6OSPYSU.js" defer></script>
+<link rel="stylesheet" href="/_bridgetown/static/index.JZN3RXTY.css" />
+<script src="/_bridgetown/static/index.RARUY3ZT.js" defer></script>
 <script src="https://cdn.tailwindcss.com"></script>
 <script type="module">let lastmod = 0
 function startReloadConnection() {
-  const evtSource = new EventSource("/my-site/_bridgetown/live_reload")
+  const evtSource = new EventSource("/_bridgetown/live_reload")
   evtSource.onmessage = event => {
     if (event.data == "reloaded!") {
       location.reload()
@@ -54,19 +54,19 @@ setTimeout(() => {
         <nav class="pointer-events-auto ">
           <ul class="flex rounded-full bg-white/80 px-1.5 md:px-3 text-sm font-medium text-zinc-800 shadow-lg shadow-zinc-800/5 ring-1 ring-zinc-900/5 backdrop-blur dark:bg-zinc-800/90 dark:text-zinc-200 dark:ring-white/10">
             <li>
-              <a class="relative block px-1.5 md:px-3 py-2 transition hover:text-teal-500 dark:hover:text-teal-400" href="/my-site/">Home</a>
+              <a class="relative block px-1.5 md:px-3 py-2 transition hover:text-teal-500 dark:hover:text-teal-400" href="/">Home</a>
             </li>
             <li>
-              <a class="relative block px-1.5 md:px-3 py-2 transition hover:text-teal-500 dark:hover:text-teal-400" href="/my-site/community">Community</a>
+              <a class="relative block px-1.5 md:px-3 py-2 transition hover:text-teal-500 dark:hover:text-teal-400" href="/community">Community</a>
             </li>
             <li>
-              <a class="relative block px-1.5 md:px-3 py-2 transition hover:text-teal-500 dark:hover:text-teal-400" href="/my-site/projects">Projects</a>
+              <a class="relative block px-1.5 md:px-3 py-2 transition hover:text-teal-500 dark:hover:text-teal-400" href="/projects">Projects</a>
             </li>
             <li>
-              <a class="relative block px-1.5 md:px-3 py-2 transition hover:text-teal-500 dark:hover:text-teal-400" href="/my-site/presentations">Speaking</a>
+              <a class="relative block px-1.5 md:px-3 py-2 transition hover:text-teal-500 dark:hover:text-teal-400" href="/presentations">Speaking</a>
             </li>
             <li>
-              <a class="relative block px-1.5 md:px-3 py-2 transition hover:text-teal-500 dark:hover:text-teal-400" href="/my-site/posts">Blog</a>
+              <a class="relative block px-1.5 md:px-3 py-2 transition hover:text-teal-500 dark:hover:text-teal-400" href="/posts">Blog</a>
             </li>
           </ul>
         </nav>
@@ -85,7 +85,7 @@ setTimeout(() => {
   <div class="mx-auto mt-12 grid max-w-xl gap-16 lg:max-w-none lg:grid-cols-2">
       <div class="flex flex-col overflow-hidden rounded-lg shadow-lg">
         <div class="flex-shrink-0">
-          <img class="h-80 w-full object-cover" src="/my-site/images/yonderbook.png" alt="" />
+          <img class="h-80 w-full object-cover" src="/images/yonderbook.png" alt="" />
         </div>
         <div class="flex flex-1 flex-col justify-between bg-white p-6">
           <div class="flex-1">
@@ -112,7 +112,7 @@ setTimeout(() => {
       </div>
       <div class="flex flex-col overflow-hidden rounded-lg shadow-lg">
         <div class="flex-shrink-0">
-          <img class="h-80 w-full object-cover" src="/my-site/images/member_vote.png" alt="" />
+          <img class="h-80 w-full object-cover" src="/images/member_vote.png" alt="" />
         </div>
         <div class="flex flex-1 flex-col justify-between bg-white p-6">
           <div class="flex-1">
@@ -140,7 +140,7 @@ setTimeout(() => {
       </div>
       <div class="flex flex-col overflow-hidden rounded-lg shadow-lg">
         <div class="flex-shrink-0">
-          <img class="h-80 w-full object-cover" src="/my-site/images/conrex.png" alt="" />
+          <img class="h-80 w-full object-cover" src="/images/conrex.png" alt="" />
         </div>
         <div class="flex flex-1 flex-col justify-between bg-white p-6">
           <div class="flex-1">
@@ -194,7 +194,7 @@ setTimeout(() => {
       </div>
       <div class="flex flex-col overflow-hidden rounded-lg shadow-lg">
         <div class="flex-shrink-0">
-          <img class="h-80 w-full object-cover" src="/my-site/images/school_location_api.png" alt="" />
+          <img class="h-80 w-full object-cover" src="/images/school_location_api.png" alt="" />
         </div>
         <div class="flex flex-1 flex-col justify-between bg-white p-6">
           <div class="flex-1">
@@ -222,7 +222,7 @@ setTimeout(() => {
       </div>
       <div class="flex flex-col overflow-hidden rounded-lg shadow-lg">
         <div class="flex-shrink-0">
-          <img class="h-80 w-full object-cover" src="/my-site/images/bodytemp.jpg" alt="" />
+          <img class="h-80 w-full object-cover" src="/images/bodytemp.jpg" alt="" />
         </div>
         <div class="flex flex-1 flex-col justify-between bg-white p-6">
           <div class="flex-1">
@@ -250,7 +250,7 @@ setTimeout(() => {
       </div>
       <div class="flex flex-col overflow-hidden rounded-lg shadow-lg">
         <div class="flex-shrink-0">
-          <img class="h-80 w-full object-cover" src="/my-site/images/abalone.jpg" alt="" />
+          <img class="h-80 w-full object-cover" src="/images/abalone.jpg" alt="" />
         </div>
         <div class="flex flex-1 flex-col justify-between bg-white p-6">
           <div class="flex-1">
@@ -276,7 +276,7 @@ setTimeout(() => {
       </div>
       <div class="flex flex-col overflow-hidden rounded-lg shadow-lg">
         <div class="flex-shrink-0">
-          <img class="h-80 w-full object-cover" src="/my-site/images/concert_match.jpg" alt="" />
+          <img class="h-80 w-full object-cover" src="/images/concert_match.jpg" alt="" />
         </div>
         <div class="flex flex-1 flex-col justify-between bg-white p-6">
           <div class="flex-1">
