--- a/community/index.html
+++ b/community/index.html
@@ -10,12 +10,12 @@
 
 <meta name="description" content="Stephanie Wilkinson leads engineering teams to create game-changing apps for schools." />
 
-<link rel="stylesheet" href="/my-site/_bridgetown/static/index.JYWYDG5T.css" />
-<script src="/my-site/_bridgetown/static/index.S6OSPYSU.js" defer></script>
+<link rel="stylesheet" href="/_bridgetown/static/index.JZN3RXTY.css" />
+<script src="/_bridgetown/static/index.RARUY3ZT.js" defer></script>
 <script src="https://cdn.tailwindcss.com"></script>
 <script type="module">let lastmod = 0
 function startReloadConnection() {
-  const evtSource = new EventSource("/my-site/_bridgetown/live_reload")
+  const evtSource = new EventSource("/_bridgetown/live_reload")
   evtSource.onmessage = event => {
     if (event.data == "reloaded!") {
       location.reload()
@@ -54,19 +54,19 @@ setTimeout(() => {
         <nav class="pointer-events-auto ">
           <ul class="flex rounded-full bg-white/80 px-1.5 md:px-3 text-sm font-medium text-zinc-800 shadow-lg shadow-zinc-800/5 ring-1 ring-zinc-900/5 backdrop-blur dark:bg-zinc-800/90 dark:text-zinc-200 dark:ring-white/10">
             <li>
-              <a class="relative block px-1.5 md:px-3 py-2 transition hover:text-teal-500 dark:hover:text-teal-400" href="/my-site/">Home</a>
+              <a class="relative block px-1.5 md:px-3 py-2 transition hover:text-teal-500 dark:hover:text-teal-400" href="/">Home</a>
             </li>
             <li>
-              <a class="relative block px-1.5 md:px-3 py-2 transition hover:text-teal-500 dark:hover:text-teal-400" href="/my-site/community">Community</a>
+              <a class="relative block px-1.5 md:px-3 py-2 transition hover:text-teal-500 dark:hover:text-teal-400" href="/community">Community</a>
             </li>
             <li>
-              <a class="relative block px-1.5 md:px-3 py-2 transition hover:text-teal-500 dark:hover:text-teal-400" href="/my-site/projects">Projects</a>
+              <a class="relative block px-1.5 md:px-3 py-2 transition hover:text-teal-500 dark:hover:text-teal-400" href="/projects">Projects</a>
             </li>
             <li>
-              <a class="relative block px-1.5 md:px-3 py-2 transition hover:text-teal-500 dark:hover:text-teal-400" href="/my-site/presentations">Speaking</a>
+              <a class="relative block px-1.5 md:px-3 py-2 transition hover:text-teal-500 dark:hover:text-teal-400" href="/presentations">Speaking</a>
             </li>
             <li>
-              <a class="relative block px-1.5 md:px-3 py-2 transition hover:text-teal-500 dark:hover:text-teal-400" href="/my-site/posts">Blog</a>
+              <a class="relative block px-1.5 md:px-3 py-2 transition hover:text-teal-500 dark:hover:text-teal-400" href="/posts">Blog</a>
             </li>
           </ul>
         </nav>
@@ -83,10 +83,10 @@ setTimeout(() => {
   <div class="m-4 dark:text-slate-400 text-base text-zinc-600 space-y-4">
     <div class="mt-12 relative rounded-xl bg-indigo-500 py-24 shadow-2xl lg:grid lg:grid-cols-2 lg:gap-x-8 lg:px-16">
   <div class="absolute inset-0 opacity-50 mix-blend-multiply saturate-0 filter">
-    <img src="/my-site/images/rubyinhollywoodgroup.jpg" alt="" class="h-full w-full object-cover" />
+    <img src="/images/rubyinhollywoodgroup.jpg" alt="" class="h-full w-full object-cover" />
   </div>
   <div class="relative lg:col-span-1">
-    <img class="w-80" src="/my-site/images/rubyinhollywoodlogo.png" alt="" />
+    <img class="w-80" src="/images/rubyinhollywoodlogo.png" alt="" />
     <blockquote class="mt-6 text-white">
       <p class="text-xl font-medium sm:text-2xl">
         I founded Ruby in Hollywood in 2015 to build a community of Rubyists. We met weekly to build apps, learn new languages, and <a href="https://pwning.owasp-juice.shop/part1/ctf.html"> play capture the flag.</a>
@@ -103,10 +103,10 @@ setTimeout(() => {
 <div class="relative mx-auto max-w-7xl">
   <div class="relative overflow-hidden rounded-xl bg-red-500 py-24 px-8 shadow-2xl lg:grid lg:grid-cols-2 lg:gap-x-8 lg:px-16">
     <div class="absolute inset-0 opacity-50 mix-blend-multiply saturate-0 filter">
-      <img src="/my-site/images/railsgirls.jpg" alt="" class="h-full w-full object-cover" />
+      <img src="/images/railsgirls.jpg" alt="" class="h-full w-full object-cover" />
     </div>
     <div class="relative lg:col-span-1">
-      <img class="w-80" src="/my-site/images/railsgirls-logo.png" alt="" />
+      <img class="w-80" src="/images/railsgirls-logo.png" alt="" />
       <blockquote class="mt-6 text-white">
         <p class="text-xl font-medium sm:text-2xl">
         I love volunteering for Railsgirls. Each year, it's fascinating to help new women and girls getting started on their programming journeys.
