deploy: 34b200324d5725e126b53b76c7ca2c98f8abbee3

--- a/index.html
+++ b/index.html
@@ -93,11 +93,15 @@ setTimeout(() => {
 
 <p> </p>
 
-<p>These days, you can find Stephanie directing the engineering department at the National Association of Independent Schools. Otherwise, you’ll find her building duplo trains with her daughter Andromeda.</p>
+<p>These days, you can find Stephanie directing the engineering department at the National Association of Independent Schools. Her teams build apps for member schools, and build the platforms and tools used by the NAIS staff. The stack includes Elixir/Phoenix, Ember.js, and Ruby/Roda.</p>
 
 <p> </p>
 
-<p>Read more of <a href="https://stephanieawilkinson.com/my-site/posts">her writing</a>, and explore <a href="https://stephanieawilkinson.com/my-site/projects">her projects</a> or <a href="https://stephanieawilkinson.com/my-site/presentations">presentations</a>.</p>
+<p>Otherwise, you’ll find her building Duplo trains with her daughter Andromeda, hiking in the Santa Monica mountains, or working on open source projects.</p>
+
+<p> </p>
+
+<p>Read more of <strong><a href="https://stephanieawilkinson.com/my-site/posts">her writing</a></strong>, and explore <strong><a href="https://stephanieawilkinson.com/my-site/projects">her projects</a></strong> or <strong><a href="https://stephanieawilkinson.com/my-site/presentations">presentations</a></strong>.</p>
 
     </span>
   </div>
